classDiagram
    class AlgoritmoBase {
        + list: List<Object>
        + AlgoritmoBase(list: List<Object>)
        + abstract ordenar(): void
    }

    class OrdenamientoBurbuja {
        + compareElements(element1: Object, element2: Object): int
        + OrdenamientoBurbuja(list: List<Object>)
        + ordenar(): void
    }

    class OrdenamientoDeInsercion {
        + OrdenamientoDeInsercion(list: List<Object>)
        + ordenar(): void
    }

    class OrdenamientoDeSeleccion {
        + OrdenamientoDeSeleccion(list: List<Object>)
        + ordenar(): void
    }

    AlgoritmoBase <|-- OrdenamientoBurbuja
    AlgoritmoBase <|-- OrdenamientoDeInsercion
    AlgoritmoBase <|-- OrdenamientoDeSeleccion
